@@ -15,7 +15,7 @@ void umwsu_print(struct umwsu *u);
 
 void umwsu_close(struct umwsu *u);
 
-enum umwsu_status umwsu_scan_file(struct umwsu *umwsu_handle, const char *path);
+  enum umwsu_status umwsu_scan_file(struct umwsu *umwsu_handle, const char *path, struct umwsu_report *report);
 
 enum umwsu_status umwsu_scan_dir(struct umwsu *umwsu_handle, const char *path, int recurse);
 
